[gd_scene load_steps=4 format=3 uid="uid://cx6gvoc8gmre1"]

[ext_resource type="Shader" path="res://assets/shaders/CRT.gdshader" id="1_igv7x"]
[ext_resource type="Script" path="res://scene scripts/Stream Gimmicks/stream gimmick.gd" id="1_pliam"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3bx5"]
shader = ExtResource("1_igv7x")
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/scan_line_amount = 0.05
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 2.5
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.135
shader_parameter/roll_speed = 2.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[node name="StreamGimmick" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pliam")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.015
anchor_right = 0.048
anchor_bottom = 0.063
offset_left = -0.368001
offset_top = 0.28
offset_right = -0.296001
offset_bottom = 0.175999
mouse_default_cursor_shape = 2
text = "Back"

[node name="TTS" type="Button" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 99.0
offset_right = 45.0
offset_bottom = 130.0
mouse_default_cursor_shape = 2
text = "TTS"

[node name="Chat" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 99.0
offset_right = 184.0
offset_bottom = 130.0
mouse_default_cursor_shape = 2
text = "On-Screen Chat"

[node name="BBCode Tester" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 135.0
offset_right = 176.0
offset_bottom = 166.0
mouse_default_cursor_shape = 2
text = "BBCode Tester"

[node name="Window" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.299
anchor_top = 0.318
anchor_right = 0.722
anchor_bottom = 0.73
offset_left = 0.551971
offset_top = -0.0640106
offset_right = 0.25592
offset_bottom = -0.0400085

[node name="TopWindowText" type="RichTextLabel" parent="Window"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]test text that is somewhat long lol."
fit_content = true

[node name="BottomWindowText" type="RichTextLabel" parent="Window"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.09
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.0300007
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]this is filler text for talking about what the command does. The command goes through several layers of insane testing before it gets sent to prod (false).
a
a
a
a
a
a
a
a
a
a
a
a
a
a
"

[node name="Overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_r3bx5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TTS" to="." method="_on_tts_pressed"]
[connection signal="pressed" from="Chat" to="." method="_on_chat_pressed"]
[connection signal="pressed" from="BBCode Tester" to="." method="_on_bb_code_tester_pressed"]
[connection signal="meta_clicked" from="Window/BottomWindowText" to="." method="_on_bottom_window_text_meta_clicked"]
